[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "crewai"
version = "0.1.0"
description = "Framework for orchestrating role-playing, autonomous AI agents."
authors = ["CrewAI Contributors"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/crewAIInc/crewAI"
keywords = ["ai", "agents", "llm", "automation", "crew"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = ">=0.1.0"
langchain-openai = ">=0.0.5"
openai = ">=1.0.0"
pydantic = ">=2.0.0"
python-dotenv = ">=1.0.0"
click = ">=8.1.0"
rich = ">=13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.1.0"
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.1.0"
mypy = ">=1.5.0"
pre-commit = ">=3.4.0"

[tool.poetry.scripts]
crewai = "crewai.cli.cli:crewai"

[tool.black]
line-length = 88  # changed from 100 to match black's default for consistency
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88  # keep in sync with black line-length

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
env_files = [".env.test"]
# Removed --cov-report=xml locally since I don't use CI coverage uploads
# Added -x to stop on first failure -- speeds up my local dev loop
addopts = "--cov=crewai --cov-report=term-missing -x"

[tool.coverage.run]
source = ["crewai"]
omit = ["tests/*", "*/__init__.py"]
